[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"
petgraph = "0.6.2"
rayon = "1.1.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
scanf = "1.2.1"